--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
   "repository": "https://github.com/Pajdzik/kabza.git",
   "author": "Kamil Pajdzik <kamil@pajdzik.pl>",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "workspaces": ["pocket-diff"]
 }
