--- a/kabza-cf-worker/package.json
+++ b/kabza-cf-worker/package.json
@@ -1,14 +1,24 @@
 {
   "name": "kabza-cf-worker",
-  "version": "0.0.0",
-  "devDependencies": {
-    "@cloudflare/workers-types": "^4.20221111.1",
-    "typescript": "^4.9.4",
-    "wrangler": "2.1.13"
-  },
+  "version": "0.0.1",
+  "type": "module",
+  "main": "bundle.js",
   "private": true,
   "scripts": {
+    "build": "ts-node esbuild.ts",
+    "watch": "ts-node esbuild.ts --watch",
     "start": "wrangler dev",
+    "local": "wrangler dev --local",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "pocket-diff": "0.0.1"
+  },
+  "devDependencies": {
+    "@cloudflare/workers-types": "^4.20221111.1",
+    "@types/node": "^18.11.18",
+    "esbuild": "^0.16.12",
+    "typescript": "^4.9.4",
+    "wrangler": "2.1.13"
   }
 }
