--- a/pocket-diff/package.json
+++ b/pocket-diff/package.json
@@ -4,5 +4,18 @@
   "main": "dist/index.js",
   "author": "Kamil Pajdzik",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">= 18.0.0"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18",
+    "prettier": "2.8.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
+  },
+  "scripts": {
+    "build": "tsc --build"
+  }
 }
