--- a/package.json
+++ b/package.json
@@ -6,5 +6,14 @@
   "author": "Kamil Pajdzik <kamil@pajdzik.pl>",
   "license": "MIT",
   "private": true,
-  "workspaces": ["kabza-cf-worker", "pocket-diff"]
+  "workspaces": [
+    "kabza-cf-worker",
+    "pocket-diff"
+  ],
+  "devDependencies": {
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard": "^17.0.0",
+    "prettier": "^2.8.1"
+  }
 }
