--- a/packages/pocket-fetch/package.json
+++ b/packages/pocket-fetch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pocket-diff",
+  "name": "pocket-fetch",
   "version": "0.0.1",
   "main": "dist/index.js",
   "author": "Kamil Pajdzik",
@@ -16,6 +16,7 @@
     "typescript": "^4.9.4"
   },
   "scripts": {
-    "build": "tsc --build"
+    "build": "tsc --build",
+    "build:watch": "tsc --build --watch"
   }
 }
