--- a/packages/kabza-cf-worker/tsconfig.json
+++ b/packages/kabza-cf-worker/tsconfig.json
@@ -1,10 +1,8 @@
 {
-    "extends": "../tsconfig.json",
-    "compilerOptions": {
-        "types": [
-            "@cloudflare/workers-types"
-        ],
-        "rootDir": "./src",
-        "outDir": "./dist"
-    },
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "types": ["@cloudflare/workers-types"],
+    "rootDir": "./src",
+    "outDir": "./dist"
+  }
 }
