--- a/packages/pocket-fetch/package.json
+++ b/packages/pocket-fetch/package.json
@@ -7,17 +7,14 @@
   "private": true,
   "type": "module",
   "engines": {
-    "node": ">= 18.0.0"
+    "node": ">= 12.0.0"
   },
   "devDependencies": {
-    "@pollyjs/adapter-fetch": "^6.0.5",
-    "@pollyjs/adapter-node-http": "^6.0.5",
-    "@pollyjs/core": "^6.0.5",
-    "@pollyjs/persister-fs": "^6.0.5",
     "@types/node": "^18.11.18",
     "prettier": "2.8.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
+    "typescript": "^4.9.5",
+    "undici": "^5.16.0",
     "vitest": "^0.28.3"
   },
   "scripts": {
